Integration Tests For AppearanceManagerController - Color, REFACTORING using entityManager against services